# whos-at-the-game

./: .gitignore  README.md  package-lock.json
backend/rest_api/: README.md  pyproject.toml  requirements.txt
backend/rest_api/games/: models.py  serializers.py  views.py
backend/rest_api/games/migrations/: 0001_initial.py  0002_remove_baseballgame_start_time_baseballgame_country_and_more.py  0003_americanfootballgame_basketballgame_footballgame_and_more.py  0004_footballgame_round_alter_footballgame_time_start.py  0005_alter_basketballgame_time_start_and_more.py  0006_alter_americanfootballgame_date_start_and_more.py  0007_alter_americanfootballgame_time_start.py  0008_americanfootballgame_week.py  0009_gamesmeta_alter_americanfootballgame_date_start_and_more.py  0010_gamesmeta_league_gamesmeta_sport_and_more.py  0011_alter_gamesmeta_date_updated.py  0012_alter_footballgame_time_start.py  0013_alter_americanfootballgame_date_start_and_more.py
backend/rest_api/rest_api/: env  settings.py  urls.py
backend/rest_api/scraper/: README.md  models.py  nlp.py  tweets.txt  views.py
backend/rest_api/scraper/data/: tweets.txt
backend/rest_api/scraper/data/processed/: ents.txt
backend/rest_api/scraper/data/raw/: tweets.txt
backend/rest_api/scraper/migrations/: 0001_initial.py
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: api.js
frontend/src/api/prod/: index.js
frontend/src/assets/: base.css
src/: App.vue  main.js
src/components/: SportsGamesHeader.vue
(+13 files in other folders)
