[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = "api endpoints supporting whosatthegame.buzz"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rest_api"}]

[tool.poetry.dependencies]
python = "^3.10.2"
Django = "4.2.1"
asgiref = "3.6.0"
djangorestframework = "3.14.0"
pytz = "2023.3"
sqlparse = "0.4.4"
tzdata = "2023.3"
snscrape = {git = "https://github.com/JustAnotherArchivist/snscrape.git"}
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
